[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/Dropshadow.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/states/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://characters/CharacterTemplate.gd" type="Script" id=3]

[node name="CharacterTemplate" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 3 )

[node name="FSM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="CatchPoint" type="Position2D" parent="Body"]

[node name="CaughtPoint" type="Position2D" parent="Body"]

[node name="Dropshadow" parent="." instance=ExtResource( 1 )]
show_behind_parent = true
